Changelog
=========

1.2 (unreleased)
----------------


1.1 (2010-03-26)
----------------

- In Plone 4, add viewlet to the abovecontent viewlet manager by default, to
  avoid weird styles.
  [davisagli]

- Added Spanish translation.
  [tzicatl]

- Only show published banners in the Carousel, even for users who have
  permission to see others.
  [davisagli]

1.0 (2009-03-31)
----------------

- Changed behavior of text links to swap banner on mouseover.
  [davisagli]


1.0b3 (2009-02-07)
------------------

- Add 'Carousel Banner' to types not searched.
  [davisagli]

- Locate carousel folder correctly on containers used as default pages
  (e.g. a Topic)
  [davisagli]

- Apply proper security declarations to the getSize and tag methods of the
  banner type so that the view works okay when customized TTW.
  [davisagli]

- Only display the carousel on default view; not any of the other tabs.
  [davisagli]

- Fix viewlet removal on uninstallation.
  [davisagli]

- Fix duplicate entries in quick installer.
  [davisagli]


1.0b2 (2009-02-04)
------------------

- Declare dependency of our custom GS import step on the viewlets step.
  [davisagli]

- Separate the (globally-registered) template from the (locally-registered)
  viewlet, so that the former can be customized using
  portal_view_customizations.
  [davisagli]

- Added banner description to the template.  Changed the 'carousel-title'
  class to 'carousel-button' so I could split out 'carousel-title' and
  'carousel-description'.
  [davisagli]

- Handle non-structural folders correctly.
  [davisagli]


1.0b1 (2009-02-03)
------------------

- Initial release.
  [davisagli]