@@ -8,26 +8,22 @@
     name="edit-carousel"
     class=".manager.CarouselFolderManager"
     permission="cmf.ManagePortal"
-    layer="Products.Carousel.interfaces.ICarouselBrowserLayer"
     />
 
   <browser:resource
     name="carousel.js"
     file="carousel.js"
-    layer="Products.Carousel.interfaces.ICarouselBrowserLayer"
     />
 
   <browser:resource
     name="carousel.css"
     file="carousel.css"
-    layer="Products.Carousel.interfaces.ICarouselBrowserLayer"
     />
 
   <browser:page
     for="*"
     name="carousel"
     template="view.pt"
-    layer="Products.Carousel.interfaces.ICarouselBrowserLayer"
     permission="zope.Public"
     />
 
