@@ -1,4 +1,0 @@
-<layers>
-    <layer name="Products.Carousel" 
-           interface="Products.Carousel.interfaces.ICarouselBrowserLayer" />
-</layers>
